-----------
v4.2.17-git
-----------



-------
v4.2.16
-------

[jan] Fix parsing sub-tasks from the quick enter dialog (Bug #14681).
[jan] Fix positioning of due time drop down list (Bug #12288).
[jan] Improve compatibilty when synchronizing tasks via CalDAV/ICS (Bug
      #14057).
[jan] Fix exporting multiple tags to iCalendar CATEGORIES (Bug #14057).
[jan] Don't include external tasks into drop down list for parent tasks.
[jan] Fix redirecting to task list after completing a task (Bug #14678).


-------
v4.2.15
-------

[jan] SECURITY: Fix open redirects.
[mjr] Fix handling of delayed start dates (Bug #14634).


-------
v4.2.14
-------

[mjr] Fix saving sync preference when no default tasklist exists (Bug #14585).
[mjr] Avoid PHP warnings due to corrupt preference values (Bug #14585).


-------
v4.2.13
-------

[jan] Fix sorting by due date with PHP < 5.5 (Bug #14507).


-------
v4.2.12
-------

[mjr] Fix fatal error caused by regression in sorting recurring tasks with due
      dates (Bug #14504).


-------
v4.2.11
-------

[mjr] Fix sorting recurring tasks by due date (Bug #14403).


-------
v4.2.10
-------

[mjr] Fix handling of start and due dates when syncing via EAS.
[jan] Avoid fatal errors if tasks don't have a UID.
[mjr] Fix parsing certain date formats (Bug #14348).
[jan] Fix deleteing alarms when completing a task.
[mjr] Require Horde_Perms::DELETE for including a tasklist as sync-able.


------
v4.2.9
------

[jan] Fix regression with date picker in tasks form (Bug #14303).
[mjr] Fix handling EAS categories/tags.


------
v4.2.8
------

[mjr] Honor date_format prefs in Task form (Bug #14287).
[jan] Update Greek translation (Limperis Antonis <limperis@cti.gr>).


------
v4.2.7
------

[mjr] Enforce child tasks must be completed before parent tasks in edit form
      (Bug #12308).
[jan] Use access rules compatible with both Apache 2.2 and 2.4.
[mjr] Fix possible fatal error due to tasks created with an alarm but no due
      date (Bug #14214).